--- a/playbooks/bootstrap_control.yml
+++ b/playbooks/bootstrap_control.yml
@@ -68,7 +68,7 @@
         mode: '0700'
 
     - name: Generate an SSH keypair if missing
-      ansible.builtin.openssh_keypair:
+      community.crypto.openssh_keypair:
         path: "{{ lookup('env','HOME') }}/.ssh/id_ed25519"
         type: ed25519
         force: no
