--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -1,12 +1,17 @@
 [lab_academico]
 # vm_jhonatan será el servidor de red (LAN gateway + DHCP)
-vm_jhonatan ansible_host=192.168.50.1 ansible_user=root
+vm_jhonatan ansible_host=192.168.50.1 ansible_user=jhonatan
 
 # mint_jhonatan será un cliente de pruebas
-mint_jhonatan ansible_host=192.168.50.100 ansible_user=root
+mint_jhonatan ansible_host=192.168.50.100 ansible_user=jhonatan
 
 # control_ansible es el nodo de control (puedes ejecutar playbooks desde aquí)
 control_ansible ansible_host=192.168.50.10 ansible_user=control
+
+[lab_academico:vars]
+# Usar become en este grupo en vez de conectarse como root directamente
+ansible_become: true
+ansible_become_method: sudo
 
 [all:vars]
 # Valores por defecto - edítalos si usas claves distintas o usuarios diferentes
