--- a/playbooks/configurar_red_vm_jhonatan.yml
+++ b/playbooks/configurar_red_vm_jhonatan.yml
@@ -23,6 +23,38 @@
       ansible.builtin.debug:
         var: interfaces.stdout_lines
         
+    - name: 🧹 LIMPIAR COMPLETAMENTE la interfaz ens34
+      ansible.builtin.shell: |
+        # Bajar la interfaz
+        ip link set ens34 down 2>/dev/null || true
+        # Limpiar cualquier IP asignada
+        ip addr flush dev ens34 2>/dev/null || true
+        # Eliminar todas las conexiones de NetworkManager en ens34
+        nmcli connection show | grep ens34 | awk '{print $1}' | xargs -r nmcli connection delete 2>/dev/null || true
+        # Subir la interfaz limpia
+        ip link set ens34 up 2>/dev/null || true
+      register: cleanup_ens34
+      
+    - name: 📋 Resultado de limpieza ens34
+      ansible.builtin.debug:
+        var: cleanup_ens34.stdout_lines
+        
+    - name: 🧹 LIMPIAR COMPLETAMENTE la interfaz ens35
+      ansible.builtin.shell: |
+        # Bajar la interfaz  
+        ip link set ens35 down 2>/dev/null || true
+        # Limpiar cualquier IP asignada
+        ip addr flush dev ens35 2>/dev/null || true
+        # Eliminar todas las conexiones de NetworkManager en ens35
+        nmcli connection show | grep ens35 | awk '{print $1}' | xargs -r nmcli connection delete 2>/dev/null || true
+        # Subir la interfaz limpia
+        ip link set ens35 up 2>/dev/null || true
+      register: cleanup_ens35
+      
+    - name: 📋 Resultado de limpieza ens35
+      ansible.builtin.debug:
+        var: cleanup_ens35.stdout_lines
+        
     - name: Detectar si estamos en Fedora
       ansible.builtin.set_fact:
         is_fedora: "{{ ansible_distribution == 'Fedora' }}"
@@ -86,7 +118,7 @@
       ansible.builtin.command: nmcli connection up wan-dhcp
       register: wan_up
       failed_when: false
-      
+        
     - name: 🚀 Habilitar forwarding IP para funcionar como router
       ansible.builtin.sysctl:
         name: net.ipv4.ip_forward
